fix(beat): ensure top-most visibility for adjusting cells

--- a/beat/css/style.css
+++ b/beat/css/style.css
@@ -362,6 +362,10 @@ body.playing #credit-btn:hover {
     z-index: 5;
 }
 
+.cell.adjusting {
+    z-index: 200 !important;
+}
+
 .cell:hover {
     z-index: 100 !important;
 }
